<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_weighing"
            android:icon="@drawable/ic_menu_weighing"
            android:title="@string/menu_weighing" />
        <item
            android:id="@+id/nav_water_intake"
            android:icon="@drawable/ic_menu_water_intake"
            android:title="@string/menu_water_intake" />
        <item
            android:id="@+id/nav_pill_remainder"
            android:icon="@drawable/ic_menu_pill_remainder"
            android:title="@string/menu_pill_remainder" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
