<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="#ADFFFFFF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/made_dillan"
            android:text="@string/weight_input_label"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <EditText
            android:id="@+id/weightInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:lines="1"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
            >
        </EditText>


        <TextView
            android:id="@+id/textViewWeighingDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/weighing_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorRedLight"
            android:textSize="13sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightInput" />

        <TextView
            android:id="@+id/textViewWeighingDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="10:55 am, 22-MAY-2020"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeighingDateTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />


        <Button
            android:id="@+id/textButtonChangeDate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/change_date"

            android:drawableStart="@drawable/ic_calendar"
            android:drawableTint="@android:color/white"

            app:layout_constraintBottom_toBottomOf="@+id/textViewWeighingDateValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textViewWeighingDateTitle"

            />

        <Button
            android:id="@+id/textButtonCancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:drawableStart="@drawable/ic_cancel"
            android:drawableTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/textButtonAccept"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textButtonAccept"

            />

        <Button
            android:id="@+id/textButtonAccept"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_weight_data"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeighingDateValue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textButtonAccept" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>